<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">盒知</string>
    <string name="company">Copyright©2018 深圳市劲嘉盒知科技有限公司</string>
    <string name="company2">Copyright©2018 劲嘉盒知</string>
    <string name="xinyunwukong">深圳市劲嘉盒知科技有限公司</string>
    <string name="protocol">盒知服务条款</string>
    <string name="about">关于</string>
    <string name="pv">PV值</string>
    <string name="product">产品信息</string>
    <string name="cumtom">定制信息</string>
    <string name="logstics">物流信息</string>
    <string name="trace_info">追溯信息</string>
    <string name="detail">详细信息</string>
    <string name="other">标识数据</string>
    <string name="delete">删除记录</string>
    <string name="rangk">排名</string>
    <string name="click_camera">点击扫描商品</string>
    <string name="about_us">关于我们</string>
    <string name="my_wallet">我的钱包</string>
    <string name="change_detail">零钱明细</string>
    <string name="get_crash">提现</string>
    <string name="guide">指引页面</string>
    <string name="cash_detail">零钱明细</string>
    <string name="godhide_model">调试模式</string>
    <string name="title_result">查询结果</string>
    <string name="nfc_scan">NFC直购</string>
    <string name="trace_result">鉴真结果</string>
    <string name="qq_login">QQ登录</string>
    <string name="qr_page">二维码扫描</string>
    <string name="product_info">产品信息</string>
    <string name="back">back</string>
    <string name="redbag">红包</string>
    <string name="search_articles">搜索文章</string>
    <string name="search_commodity">搜索商品</string>
    <string name="search_live">搜索品牌直播</string>
    <string name="pv_value">真品,PV值=</string>
    <string name="no_nfc">该设备不支持NFC</string>
    <string name="open_nfc">NFC功能没打开，请打开</string>
    <string name="unvalidLabel">Unvalid Label!</string>
    <string name="query_except">Identification of abnormal</string>
    <string name="query_doing">Is executing,Please wait!</string>
    <string name="query_failure">Checking failure</string>
    <string name="confidence_level">产品体征值</string>
    <string name="detection_result">查询结果</string>
    <string name="product_name">产品名称</string>
    <string name="tag_number">标签编号</string>
    <string name="produce_data">生产日期</string>
    <string name="product_size">产品规格</string>
    <string name="sale_stus">销售状态</string>
    <string name="bathNo">产品批次</string>
    <string name="result">真品 </string>
    <string name="credible_zero">需深入查验</string>
    <string name="fail">检验未通过。</string>
    <string name="about_us_desc">\t\t\t\t盒知是一款让消费者安心购物的APP软件，帮你轻松识别产品可信度PV值，产品质量溯源，做到先查后买，放心购物。\n\t\t\t\tPV=Production Value 产品生命值应用RFID技术解决商品真假、可靠性问题、物权鉴定及交易行为鉴定的一套可信认证体系，最终的结果以PV值体现出来</string>
    <string name="currentPV">实测PV值</string>
    <string name="socialAveragePV">基准PV值</string>
    <string name="promisePV">承诺PV值</string>
    <string name="url">\t\t\t\t网址：</string>
    <string name="oneyuan_distinguish">一元鉴真</string>
    <string name="trace_distinguish">溯源鉴真</string>
    <string name="wukong_trace">盒知溯源</string>
    <string name="hezhi_sale">盒知直购</string>
    <string name="saotuhudong">扫图互动</string>
    <string name="maotai_market">商城</string>
    <string name="business_name">商户名称</string>
    <string name="comment">评论</string>
    <string name="live_comment">评论</string>
    <string name="main_page">主页</string>
    <string name="suyuan_page">溯源页面</string>
    <string name="ar_interact">AR互动</string>
    <string name="express_query">快递查询</string>
    <string name="my_attetion">我的关注</string>
    <string name="press_sale">点击直购</string>
    <string name="qurrey_trace">查看详细信息</string>
    <string name="check">盘点</string>
    <string name="instorage">入库</string>
    <string name="outstorage">出库</string>
    <string name="stowage">装车</string>
    <string name="unloading">卸货</string>
    <string name="qurrey">查询</string>
    <string name="sale">销售</string>
    <string name="distinguish">鉴真</string>
    <string name="market">商城</string>
    <string name="wholesale">批发</string>
    <string name="about_me">个人中心</string>
    <string name="find">发现</string>
    <string name="buy">品牌直播</string>
    <string name="hezhi">盒知</string>
    <string name="nfc_distinguish">NFC鉴真</string>
    <string name="my_collection">我的收藏</string>
    <string name="search_article">搜索</string>
    <string name="recieve">发现</string>
    <string name="me">我的</string>
    <string name="update_tip">升级提示</string>
    <string name="wenxin_tip">温馨提醒</string>
    <string name="get_cash_sucess">提现成功</string>
    <string name="tip">提示</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="qurrey_time">查询时间</string>
    <string name="company_name">生产厂商</string>
    <string name="qurrey_addr">查询地点</string>
    <string name="used_lefthand">习惯左手</string>
    <string name="used_righthand">习惯右手</string>
    <string name="save_sucess">保存成功</string>
    <string name="save">保存</string>
    <string name="let_me_think">我再想想</string>
    <string name="tips_save">确定要保存设计吗？\n保存后的设计将无法返回修改</string>
    <string name="authorization_code_empty">无效标签,没有查到此产品</string>
    <string name="authorization_code">授权码</string>
    <string name="server_return_empty">服务器返回为空。</string>
    <string name="tag_intact">标签完好</string>
    <string name="tag_break">标签破损</string>
    <string name="suggest_buy">可以购买</string>
    <string name="not_suggest_buy">不建议购买</string>
    <string name="query_failed">查询失败</string>
    <string name="no_product">没有对应商品</string>
    <string name="base_pv_value">基准PV值：</string>
    <string name="this_pv_value">本产品PV值：</string>
    <string name="operater">操作人</string>
    <string name="remark">备注信息</string>
    <string name="score">分</string>
    <string name="full_score">各项满分100</string>
    <string name="diconnect_blue">断开蓝牙</string>
    <string name="connect_blue">连接蓝牙</string>
    <string name="wechat_pay_distinguish">微信支付鉴真</string>
    <string name="blue_conect_sucess_tips">设备连接成功，\n请将蓝牙吊坠靠近标签特定区域</string>
    <string name="blue_version_low_tips">系统版本较低，不支持蓝牙4.0，请升级至4.3及以上系统</string>
    <string name="device_disconnect">设备断开链接</string>
    <string name="searching_device">正在搜索设备...</string>
    <string name="connecting_device">正在连接设备...</string>
    <string name="not_find_device">未找到设备，\n请检查吊坠和手机蓝牙是否开启</string>
    <string name="please_later">请稍候...</string>
    <string name="onloading">加载中...</string>
    <string name="this_is_latest_version">当前为最新版本</string>
    <string name="find_new_version">发现新的版本，是否升级？</string>
    <string name="update_now">立即更新</string>
    <string name="update_cancel">稍后再说</string>
    <string name="updating_please_later">正在更新，请耐心等待...</string>
    <string name="version_number">版本编号</string>
    <string name="check_update">检查更新</string>
    <string name="feedback_suggestion">反馈建议</string>
    <string name="register">注册</string>
    <string name="logistics_company">公司</string>
    <string name="nfc_trace">NFC</string>
    <string name="otft_trace">OTFT</string>
    <string name="ddd_introduce">3D说明书</string>
    <string name="saotu">扫图互动</string>
    <string name="select_logistics_company">请选择物流公司</string>
    <string name="zhongtong">中通</string>
    <string name="yuantong">圆通</string>
    <string name="shentong">申通</string>
    <string name="shunfeng">顺丰</string>
    <string name="tiantian">天天</string>
    <string name="jd">京东</string>
    <string name="youzheng">邮政</string>
    <string name="yunda">韵达</string>
    <string name="zhaijisong">宅急送</string>
    <string name="ems">EMS</string>
    <string name="amazon">亚马逊</string>
    <string name="baishi">百世</string>
    <string name="guotong">国通</string>
    <string name="uc">优速</string>
    <string name="debang">德邦</string>
    <string name="fast">快捷</string>
    <string name="quanfeng">全峰</string>
    <string name="play_over">播放完成</string>
    <string name="click_two">再按一次返回退出应用</string>
    <string name="canncel_update">再按一次返回，取消升级</string>
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="button_OK">OK</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="person_info">个人信息</string>
    <string name="setting">设置</string>
    <string name="purchase">直购</string>
    <string name="product_main">详情信息</string>
    <string name="shangpin_info">商品信息</string>
    <string name="feedback">意见反馈</string>
    <string name="upload">上传信息</string>
    <string name="feedback_sucess">反馈成功</string>
    <string name="function_introduce">功能介绍</string>
    <string name="hezhi_foucus">盒知看点</string>
    <string name="article_list">文章列表</string>
    <string name="contact_us">联系我们</string>
    <string name="account_safe">账户与安全</string>
    <string name="article_more">文章详情</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="close_tv">关闭</string>
    <string name="change_phone">更换手机号</string>
    <string name="phone">手机号</string>
    <string name="bind_social">社交账号绑定</string>
    <string name="set_pay_psw">修改支付密码</string>
    <string name="invite_friend">邀请好友</string>
    <string name="nickname">昵称</string>
    <string name="nickname_error">昵称不能含有表情</string>
    <string name="nickname_empty">请输入昵称</string>
    <string name="submit">提交</string>
    <string name="area">地区</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="select_album">选择照片</string>
    <string name="select_video">选择视频</string>
    <string name="photograph">拍照</string>
    <string name="photo_video">拍摄/拍照</string>
    <string name="introduce_info">1.一个滤灭假货的直购互动平台：\n查假货购真货全程追溯 智能签收\n2.一边玩，一边赚钱：\n查真伪能赚钱 ，互动能赚钱，分享也能赚钱\n3.让每个驰名品牌都能成为跨界广告平台：\n盒知传媒=第一媒体+第五媒体=第六媒体.\n4.盒知+OTFT，快速实现酒、茶、大米产业物联网\n5.盒知APP实现物联网电商直购和品牌竞价排名\n6.盒知APP实现名片视频自助广告与社交</string>
    <string name="msg_center">消息中心</string>
    <string name="text_edit">编辑</string>
    <string name="commodity">商品</string>
    <string name="address_default">默认</string>
    <string name="address_delete">删除</string>
    <string name="address_is_default">默认地址</string>
     <string name="sms">验证码</string>
    <string name="lock_sms_info">我们已经将验证码发送到这个号码</string>
    <string name="lock_sms_get">获取验证码</string>
    <string name="lock_sms_input">输入验证码开锁</string>
    <string name="detail_info">详情</string>
    <string name="appraise">评价</string>
    <string name="appraise_show">评价晒单</string>
    <string name="appraise_add">追加评价</string>
    <string name="appraise_view">查看评价</string>
</resources>