<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray"
    android:orientation="vertical" 
    >

      <RelativeLayout 
           android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:background="@color/white"
          >
          <ImageView 
              android:id="@+id/image_commodity"
              android:layout_width="72dp"
    android:layout_height="72dp"
    android:layout_alignParentLeft="true"
    android:contentDescription="@string/app_name"
    android:layout_centerVertical="true"
    android:scaleType="centerCrop"
    android:background="@drawable/bg_custom"
              />
         <TextView 
              android:id="@+id/text_name"
              android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/text_main"
    android:textSize="@dimen/text_size_normal"
    android:layout_toRightOf="@+id/image_commodity"
    android:paddingLeft="16dp"
    android:paddingTop="6dp"
    android:maxLines="2"
    android:ellipsize="end"
              />
         
         <LinearLayout 
               android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/image_commodity"
         android:layout_alignParentRight="true"
         android:gravity="right"
         >
          <TextView 
            android:id="@+id/btn_appraise_show"
            android:layout_width="74dp"
        android:layout_height="28dp"
         android:background="@drawable/selector_btn_submit_line"
         android:text="@string/appraise_show"
         android:textColor="@drawable/selector_text_font_basetowhite"
         android:textSize="@dimen/text_size_normal"
         android:gravity="center"
            />
        <TextView 
            android:id="@+id/btn_appraise_view"
            android:layout_width="74dp"
        android:layout_height="28dp"
         android:background="@drawable/selector_btn_submit_line2"
         android:text="@string/appraise_view"
         android:textColor="@color/text_tutor2"
         android:textSize="@dimen/text_size_normal"
          android:gravity="center"
            />
        <TextView 
            android:id="@+id/btn_appraise_add"
            android:layout_width="74dp"
        android:layout_height="28dp"
         android:background="@drawable/selector_btn_submit_line"
         android:text="@string/appraise_add"
         android:textColor="@drawable/selector_text_font_basetowhite"
         android:textSize="@dimen/text_size_normal"
         android:gravity="center"
         android:layout_marginLeft="@dimen/margin"
            />
        </LinearLayout>
      </RelativeLayout>
</LinearLayout>