<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar"
        android:background="@color/white"
        android:gravity="center" >

        <RelativeLayout
            android:id="@+id/header_left"
            android:layout_width="@dimen/title_bar"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_whitetogray_nocorner"
            android:gravity="center" >

            <TextView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@drawable/icon_scan"
                android:textColor="@color/text_normal"
                android:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/nfc_distinguish"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_bigger" />

        <RelativeLayout
            android:id="@+id/header_right"
            android:layout_width="@dimen/title_bar"
            android:layout_height="@dimen/title_bar"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_whitetogray_nocorner"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/right_tv"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_msg"
                android:textColor="@color/text_normal"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/red_point"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/shape_dot_red" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_line_height"
            android:layout_alignParentBottom="true"
            android:background="@color/linecolor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar"
        android:layout_gravity="center"
        android:background="@drawable/selector_viewpager_instruct"
        android:gravity="center"
        android:visibility="gone" >

        <RadioGroup
            android:id="@+id/rg_group"
            android:layout_width="180dp"
            android:layout_height="@dimen/title_bar"
            android:background="@color/bg_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_nfc"
                style="@style/RadioButton"
                android:text="@string/nfc_trace" />

            <RadioButton
                android:id="@+id/rb_otft"
                style="@style/RadioButton"
                android:text="@string/otft_trace" />

            <RadioButton
                android:id="@+id/rb_distinguish"
                style="@style/RadioButton"
                android:text="@string/oneyuan_distinguish"
                android:visibility="gone" />
        </RadioGroup>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_radiogroup"
        android:layout_below="@+id/header" >
    </android.support.v4.view.ViewPager>

</LinearLayout>