<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_gray"
                android:orientation="vertical"
                tools:context="com.wukong.hezhi.ui.activity.TraceActivity"
    >

    <RelativeLayout
        android:id="@+id/head_ly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@drawable/selector_viewpager_instruct"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/header_left"
            android:layout_width="@dimen/title_bar"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:background="@drawable/selector_whitecolor_bg"
            android:drawableLeft="@drawable/icon_back"
            android:gravity="center"
            android:paddingLeft="@dimen/margin"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/text_size_normal"/>

        <RadioGroup
            android:id="@+id/main_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginBottom="1px"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/main_rb_commodity"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_bar"
                android:background="@drawable/selector_viewpager_instruct"
                android:button="@null"
                android:gravity="center"
                android:text="@string/commodity"
                android:textColor="@drawable/selector_gray_to_black"/>

            <RadioButton
                android:id="@+id/main_rb_detail"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_bar"
                android:layout_marginLeft="@dimen/margin3"
                android:layout_marginRight="@dimen/margin3"
                android:background="@drawable/selector_viewpager_instruct"
                android:button="@null"
                android:gravity="center"
                android:text="@string/detail_info"
                android:textColor="@drawable/selector_gray_to_black"
                />

            <RadioButton
                android:id="@+id/main_rb_appraise"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_bar"
                android:layout_marginLeft="0dp"
                android:background="@drawable/selector_viewpager_instruct"
                android:button="@null"
                android:gravity="center"
                android:text="@string/appraise"
                android:textColor="@drawable/selector_gray_to_black"/>
        </RadioGroup>
    </RelativeLayout>

    <com.wukong.hezhi.ui.view.NoPreloadViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head_ly"
        >
    </com.wukong.hezhi.ui.view.NoPreloadViewPager>

</RelativeLayout>