<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray" 
    android:orientation="vertical"
    >

    <LinearLayout 
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" 
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin"
    >
    <RelativeLayout
         android:id="@+id/address_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_whitetogray_nocorner" 
        android:paddingLeft="@dimen/margin"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        >
        
       <LinearLayout 
           android:id="@+id/layout_body"
           android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/margin"
         android:background="@drawable/selector_whitetogray_nocorner" 
           >
           <LinearLayout 
               android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
            <TextView
            android:id="@+id/text_user_name"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main"
            android:textSize="@dimen/text_size_bigger" 
            android:ellipsize="end"
            android:maxLines="1"
            />
            <TextView
            android:id="@+id/text_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main"
            android:textSize="@dimen/text_size_bigger"
            android:layout_marginLeft="28dp"
            android:maxLength="11"
             />
            
            <TextView 
            android:id="@+id/text_default"
            android:layout_width="40dp"
        android:layout_height="18dp"
         android:background="@drawable/selector_btn_submit_line"
         android:text="@string/address_default"
         android:textColor="@drawable/selector_text_font_basetowhite"
         android:textSize="@dimen/text_size_small"
          android:gravity="center"
          android:layout_marginLeft="@dimen/margin"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:onClick="false"
          android:enabled="false"
            />
            
		</LinearLayout>
        <TextView
            android:id="@+id/text_user_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_tutor"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginTop="@dimen/margin"
             />
       </LinearLayout>
      
    </RelativeLayout>

    <include 
        layout="@layout/view_line_horizontal"/>
    
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/selector_whitetogray_nocorner" 
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        >
        <CheckBox
           android:id="@+id/check_default"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:button="@drawable/selector_check"
           android:paddingLeft="4dp"
           android:text="@string/address_is_default"
           android:gravity="center_vertical"
           android:textColor="@color/text_main"
           android:textSize="@dimen/text_size_normal" 
           android:layout_centerVertical="true"
           android:layout_alignParentLeft="true"
           />
         
        <LinearLayout
            android:layout_width="match_parent"
           android:layout_height="wrap_content" 
            android:layout_centerVertical="true"
           android:layout_alignParentRight="true"
           android:gravity="center_vertical|right"
           android:layout_toRightOf="@+id/check_default"
           >
            <TextView 
                android:id="@+id/text_edit"
                android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:text="@string/text_edit"
           android:gravity="center_vertical"
           android:textColor="@color/text_main"
           android:textSize="@dimen/text_size_normal" 
           android:drawableLeft="@drawable/icon_edit"
           android:drawablePadding="4dp"
                />
             <TextView 
                android:id="@+id/text_delete"
                android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:text="@string/address_delete"
           android:gravity="center_vertical"
           android:textColor="@color/text_main"
           android:textSize="@dimen/text_size_normal" 
           android:drawableLeft="@drawable/icon_delete"
           android:drawablePadding="4dp"
           android:layout_marginLeft="16dp"
                />
        </LinearLayout>
       </RelativeLayout>
       
     </LinearLayout>
</LinearLayout>